--- a/src/app/views/home/home.html
+++ b/src/app/views/home/home.html
@@ -85,8 +85,17 @@
 
             <div class="row">
                 <div class="form-group col-sm-12 col-md-10">
-                    <input type="text" class="input-text full-width"
-                           placeholder="Equipment Name, Part Name, etc.." ng-model="mdl.searchText"/>
+                    <angucomplete-alt
+                            placeholder="Equipment Name, Part Name, etc.."
+                            pause="400"
+                            selected-object="mdl.searchObj"
+                            remote-api-handler="mdl.searchHelper"
+                            remote-url-data-field="data"
+                            title-field="name"
+                            input-changed="mdl.inputChanged"
+                            input-class="input-text full-width"/>
+                    <!--<input type="text" class="input-text full-width"-->
+                           <!--placeholder="Equipment Name, Part Name, etc.." ng-model="mdl.searchText"/>-->
                 </div>
 
                 <div class="form-group col-md-2">
