--- a/src/app/views/account/profile/view/view.html
+++ b/src/app/views/account/profile/view/view.html
@@ -1,109 +1,17 @@
 <div class="view-profile">
     <article class="image-box style2 box innerstyle personal-details">
-        <figure>
-            <a title=""  ><img width="270" height="263" alt="" src="http://placehold.it/270x263"></a>
-        </figure>
-        <div class="details">
-            <a ui-sref="main.account.profile.edit" class="button btn-mini pull-right edit-profile-btn">EDIT PROFILE</a>
+        <div >
+            <a style="margin:0px 5px" ui-sref="main.account.profile.edit" class="button btn-mini pull-right edit-profile-btn">EDIT PROFILE</a>
+            <a class="button btn-mini pull-right edit-profile-btn">CHANGE PASSWORD</a>
             <h2 class="box-title fullname">{{mdl.user.fullname}}</h2>
-            <dl class="term-description">
+            <dl class="term-description col-lg-6">
                 <dt>user name:</dt><dd>{{mdl.user.email}}</dd>
                 <dt>phone number:</dt><dd>{{mdl.user.phone}}</dd>
+                <dt>store name:</dt><dd>{{mdl.user.store_name}}</dd>
+                <dt>time zone:</dt><dd>{{mdl.user.timezone}}</dd>
                 <dt>ZIP code:</dt><dd>{{mdl.user.zip_code}}</dd>
             </dl>
         </div>
     </article>
-    <hr>
-    <h2>About You</h2>
-    <div class="intro">
-        <p>Vestibulum tristique, justo eu sollicitudin sagittis, metus dolor eleifend urna, quis scelerisque purus quam nec ligula. Suspendisse iaculis odio odio, ac vehicula nisi faucibus eu. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse posuere semper sem ac aliquet. Duis vel bibendum tellus, eu hendrerit sapien. Proin fringilla, enim vel lobortis viverra, augue orci fringilla diam, sed cursus elit mi vel lacus. Nulla facilisi. Fusce sagittis, magna non vehicula gravida, ante arcu pulvinar arcu, aliquet luctus arcu purus sit amet sem. Mauris blandit odio sed nisi porttitor egestas. Mauris in quam interdum purus vehicula rutrum quis in sem. Integer interdum lectus at nulla dictum luctus. Sed risus felis, posuere id condimentum non, egestas pulvinar enim. Praesent pretium risus eget nisi ullamcorper fermentum. Duis lacinia nisi ac rhoncus vestibulum.</p>
-    </div>
-    <hr>
-    <h2>Suggested Equipment</h2>
-    <div class="suggestions image-carousel style2" data-animation="slide" data-item-width="170" data-item-margin="22">
-        <ul class="slides">
-            <li>
-                <a class="hover-effect">
-                    <img src="http://placehold.it/170x170" alt="" />
-                </a>
-                <h5 class="caption">Adventure</h5>
-            </li>
-            <li>
-                <a   class="hover-effect">
-                    <img src="http://placehold.it/170x170" alt="" />
-                </a>
-                <h5 class="caption">Beaches &amp; Sun</h5>
-            </li>
-            <li>
-                <a   class="hover-effect">
-                    <img src="http://placehold.it/170x170" alt="" />
-                </a>
-                <h5 class="caption">Casinos</h5>
-            </li>
-            <li>
-                <a   class="hover-effect">
-                    <img src="http://placehold.it/170x170" alt="" />
-                </a>
-                <h5 class="caption">Family Fun</h5>
-            </li>
-            <li>
-                <a   class="hover-effect">
-                    <img src="http://placehold.it/170x170" alt="" />
-                </a>
-                <h5 class="caption">History</h5>
-            </li>
-            <li>
-                <a   class="hover-effect">
-                    <img src="http://placehold.it/170x170" alt="" />
-                </a>
-                <h5 class="caption">Adventure</h5>
-            </li>
-        </ul>
-    </div>
-    <hr>
-    <div class="row">
-        <div class="col-md-4">
-            <h4>Benefits of Tavelo Account</h4>
-            <ul class="benefits triangle hover">
-                <li><a  >Faster bookings with lesser clicks</a></li>
-                <li><a  >Track travel history &amp; manage bookings</a></li>
-                <li class="active"><a  >Manage profile &amp; personalize experience</a></li>
-                <li><a  >Receive alerts &amp; recommendations</a></li>
-            </ul>
-        </div>
-        <div class="col-md-4 previous-bookings image-box style14">
-            <h4>Your Previous Bookings</h4>
-            <article class="box">
-                <figure class="no-padding">
-                    <a title=""  >
-                        <img alt="" src="http://placehold.it/63x59" width="63" height="59">
-                    </a>
-                </figure>
-                <div class="details">
-                    <h5 class="box-title"><a  >Half-Day Island Tour</a><small class="fourty-space"><span class="price">$35</span> Family Package</small></h5>
-                </div>
-            </article>
-            <article class="box">
-                <figure class="no-padding">
-                    <a title=""  >
-                        <img alt="" src="http://placehold.it/63x59" width="63" height="59">
-                    </a>
-                </figure>
-                <div class="details">
-                    <h5 class="box-title"><a  >Ocean Park Tour</a><small class="fourty-space"><span class="price">$26</span> Per Person</small></h5>
-                </div>
-            </article>
-        </div>
-        <div class="col-md-4">
-            <h4>Need Travelo Help?</h4>
-            <div class="contact-box">
-                <p>We would be more than happy to help you. Our team advisor are 24/7 at your service to help you.</p>
-                <address class="contact-details">
-                    <span class="contact-phone"><i class="soap-icon-phone"></i> 1-800-123-HELLO</span>
-                    <br>
-                    <a class="contact-email"  >help@travelo.com</a>
-                </address>
-            </div>
-        </div>
-    </div>
+
 </div>
