--- a/src/app/views/account/profile/view/view.html
+++ b/src/app/views/account/profile/view/view.html
@@ -2,7 +2,7 @@
     <article class="image-box style2 box innerstyle personal-details">
         <div >
             <a style="margin:0px 5px" ui-sref="main.account.profile.edit" class="button btn-mini pull-right edit-profile-btn">EDIT PROFILE</a>
-            <a class="button btn-mini pull-right edit-profile-btn">CHANGE PASSWORD</a>
+            <a ui-sref="main.account.profile.changePassword" class="button btn-mini pull-right edit-profile-btn">CHANGE PASSWORD</a>
             <h2 class="box-title fullname">{{mdl.user.fullname}}</h2>
             <dl class="term-description col-lg-6">
                 <dt>user name:</dt><dd>{{mdl.user.email}}</dd>
