fixed jobsite issue

--- a/src/app/views/account/jobsites/list/list.html
+++ b/src/app/views/account/jobsites/list/list.html
@@ -22,7 +22,7 @@
             <a class="hover-effect popup-gallery"><img width="72" height="72" alt="" src=""></a>
         </div>
         <h4 class="box-title">
-            <i class="icon soap-icon-departure yellow-color circle">{{site.name}}</i>
+            <i class="icon soap-icon-departure yellow-color circle"></i>{{site.name}}
             <small>{{site.city.name}},{{site.state.name}},{{site.country.name}}</small>
         </h4>
         <dl class="info">
