--- a/src/app/views/home/home.html
+++ b/src/app/views/home/home.html
@@ -22,7 +22,7 @@
 <div class="container">
     <h1 class="logo navbar-brand">
         <a ui-sref="home" >
-            <img src="assets/images/logo.png" alt="Marketplace"/>
+            <img ui-sref="home" src="assets/images/logo.png" alt="Marketplace"/>
         </a>
     </h1>
 
