minor header fixes

--- a/src/app/views/main/main.html
+++ b/src/app/views/main/main.html
@@ -4,7 +4,7 @@
             <div class="container">
                 <nav id="main-menu" role="navigation">
                     <ul class="menu">
-                        <li class="menu-item-has-children">
+                        <li class="menu-item-has-children pointerhover">
                             <a>Need Help?</a>
                         </li>
                     </ul>
@@ -18,7 +18,7 @@
                     </li>
                     <li></li>
                     <li class="ribbon currency">
-                        <a ng-click="accountClick()" class="soap-popupbox">ACCOUNT</a>
+                        <a ng-click="accountClick()" class="soap-popupbox pointerhover">ACCOUNT</a>
                         <ul class="menu mini">
                             <li><a href="#" title="dashboard">Dashboard</a></li>
                             <li><a href="#" title="profile-settings">Profile Settings</a></li>
