--- a/src/app/style/sass/style.scss
+++ b/src/app/style/sass/style.scss
@@ -2216,7 +2216,7 @@ ol {  }
         margin: 0 auto; float: none;
         > li {
           padding-left: 0; padding-right: 0px; margin-right: 10px;
-          > a { padding-left: 15px; padding-right: 15px; height: 50px; line-height: 50px; color: $light-blue-theme-color; }
+          > a { padding-left: 15px; padding-right: 15px; height: 50px; line-height: 50px; color: #FFF; }
           &.active > a, & > a:hover { color: #fff; background: #E37F1F; }
           &:hover > ul, &:hover > .megamenu-wrapper { top: 47px; }
         }
