--- a/src/app/views/home/home.html
+++ b/src/app/views/home/home.html
@@ -4,7 +4,7 @@
         <nav id="main-menu" role="navigation">
             <ul class="menu">
                 <li class="menu-item-has-children">
-                    <a >Live Chat</a>
+                    <a class="pointerhover">Need Help?</a>
                 </li>
             </ul>
         </nav>
