--- a/src/app/views/sign-up/sign-up.html
+++ b/src/app/views/sign-up/sign-up.html
@@ -45,6 +45,7 @@
             <div class="form-group">
                 <p class="description">By signing up, I agree to Marketplace Terms of Service &amp; Privacy Policy.</p>
             </div>
+            <div class="error">{{signUpMdl.errorMessage}}</div>
             <button type="submit" class="full-width btn-medium" ng-click="signUpMdl.signUp()">SIGNUP</button>
         </form>
     </div>
