--- a/src/app/style/sass/style.scss
+++ b/src/app/style/sass/style.scss
@@ -3011,7 +3011,7 @@ ul.menu.mini {
 ul.search-tabs {
   margin: 0; padding: 0;
   li {
-    float: left; padding-right: 4px;
+    float: left; padding-right: 4px; cursor: pointer;
     a { color: #333; display: block; padding: 0 30px; background: #fff; font-size: 1em; font-weight: bold; height: 40px; line-height: 40px; text-decoration: none; @include opacity(0.4); letter-spacing: 0.04em; text-transform: uppercase; }
     a:hover { @include opacity(0.7); }
   }
