--- a/src/app/views/sign-up/sign-up.html
+++ b/src/app/views/sign-up/sign-up.html
@@ -6,7 +6,7 @@
     <div class="seperator"><label>OR</label></div>
     <div ng-init="emailSignUp=0" class="simple-signup">
         <div class="text-center signup-email-section">
-            <a ng-click="emailSignUp=1" class="signup-email"><i class="soap-icon-letter"></i>Sign up with Email</a>
+            <a ng-click="emailSignUp=1" class="signup-email pointerhover"><i class="soap-icon-letter"></i>Sign up with Email</a>
         </div>
         <p class="description">By signing up, I agree to Marketplace Terms of Service &amp; Privacy Policy.</p>
     </div>
@@ -50,5 +50,5 @@
         </form>
     </div>
     <div class="seperator"></div>
-    <p>Already a Marketplace member? <a class="goto-login soap-popupbox" ng-click="signUpMdl.login()">Login</a></p>
+    <p>Already a Marketplace member? <a class="goto-login soap-popupbox pointerhover" ng-click="signUpMdl.login()">Login</a></p>
 </div>
