search result css fixes

--- a/src/app/views/login/login.html
+++ b/src/app/views/login/login.html
@@ -15,7 +15,7 @@
             <a class="forgot-password pull-right pointerhover">Forgot password?</a>
             <div class="checkbox checkbox-inline">
                 <label>
-                    <input type="checkbox">Remember me
+                    <input type="checkbox">Remember Me
                 </label>
             </div>
         </div>
