--- a/src/app/style/sass/style.scss
+++ b/src/app/style/sass/style.scss
@@ -3155,6 +3155,7 @@ ul.search-tabs {
     float: left;
     .sort-by-container {
       position: relative; display: block;
+      cursor: pointer;
       > span {
         background: #f5f5f5; height: 34px; padding: 0 45px 0 15px; line-height: 34px; display: block; color: #9e9e9e;
         &:after { position: absolute; right: 0; top: 0; bottom: 0; height: 100%; width: 30px; background: #d9d9d9; content: ""; }
@@ -3169,7 +3170,7 @@ ul.search-tabs {
   .swap-tiles {
     float: right; font-size: 33px;
     li > a > i { display: block; width: 34px; line-height: 34px; height: 34px; background: #f5f5f5; color: #d9d9d9; text-align: center; }
-    li:hover > a > i, li.active > a > i { background: $skin-bg-color; color: #fff; }
+    li:hover > a > i, li.active > a > i { background: $skin-bg-color; color: #fff; cursor: pointer; }
     li.swap-list > a > i { font-size: 30px; }
   }
 }
@@ -3193,7 +3194,7 @@ ul.search-tabs {
 .filters-container ul.filters-option {
   margin-bottom: 10px;
   li {
-    margin-bottom: 1px; background: #f5f5f5; padding: 0 15px;
+    margin-bottom: 1px; background: #f5f5f5; padding: 0 15px; cursor: pointer;
     a {
       color: inherit; display: block; padding: 8px 0 8px 20px; text-transform: uppercase; font-size: 11px; }
     small { float: right; }
@@ -5010,6 +5011,11 @@ button.ui-button::-moz-focus-inner { border: 0; padding: 0; }
     margin-top: 13px;
     margin-left: -29px;
     color: $light-blue-color;
+  }
+}
+.grid-price-panel {
+  .price {
+    height: 60px;
   }
 }
 /* custom style ends*/
