--- a/src/app/views/main/main.html
+++ b/src/app/views/main/main.html
@@ -25,7 +25,7 @@
                             <li><a ng-click="logout()" title="signout">Signout</a></li>
                         </ul>
                     </li>
-                    <li>
+                    <li ng-if="isLoggedIn()">
                         <a class="pointerhover cart-count" ui-sref="main.cart"><i class="soap-icon-shopping" style="font-size: 6em;"></i><span>3</span></a>
                     </li>
 
