--- a/src/app/views/login/login.html
+++ b/src/app/views/login/login.html
@@ -12,7 +12,7 @@
             <input type="password" name="password" ng-model="loginMdl.data.password" required class="input-text full-width" placeholder="password">
         </div>
         <div class="form-group">
-            <a class="forgot-password pull-right pointerhover">Forgot password?</a>
+            <a ng-click="loginMdl.forgotPassword()" class="forgot-password pull-right pointerhover">Forgot password?</a>
             <div class="checkbox checkbox-inline">
                 <label>
                     <input type="checkbox">Remember Me
