--- a/src/app/style/sass/style.scss
+++ b/src/app/style/sass/style.scss
@@ -906,9 +906,9 @@ ol {  }
   ul.tabs {
     margin: 0; padding: 0;
     li {
-      float: left; padding-right: 4px;
+      float: left; padding-right: 4px; cursor: pointer;
       &:last-child { padding-right: 0; }
-      a { color: #fff; display: block; padding: 0 10px; background: #d9d9d9; font-size: 1em; font-weight: bold; height: 40px; line-height: 40px; text-decoration: none; text-transform: uppercase; white-space: nowrap; }
+      a { color: #3E3E3E; display: block; padding: 0 10px; background: #d9d9d9; font-size: 1em; font-weight: bold; height: 40px; line-height: 40px; text-decoration: none; text-transform: uppercase; white-space: nowrap; }
       a:hover { }
       &.active > a, &:hover > a { color: $skin-active-color; background: #fff; }
     }
@@ -943,7 +943,7 @@ ol {  }
     ul.tabs {
       display: block; background: #fff; padding: 10px 0 10px 10px; border-bottom: 1px solid #f5f5f5;
       li {
-        padding-right: 10px;
+        padding-right: 10px; cursor: pointer;
         a { height: 30px; line-height: 30px; background: #f5f5f5; padding: 0 18px; color: #9e9e9e; font-weight: normal; font-size: 0.9167em; font-weight: bold; }
         &.active > a, &:hover > a {
           color: #fff; background: $skin-active-color; position: relative;
@@ -2101,7 +2101,7 @@ ol {  }
   .topnav { 
     height: 30px; background: $skin-bg-color; width: 100%;
     ul.quick-menu > li { 
-      float: left; margin-left: 20px; padding-left:10px; padding-right:10px;
+      float: left;/* margin-left: 20px;*/ padding-left:10px; padding-right:10px;
       &:hover {
        background-color: $light-blue-color;
       }
